# Code_nhan_dien

./: CMakeLists.txt  Pi4RobotDriver.cpp  Pi4RobotDriver.h  camera.cpp  camera.h  install_ncnn_pi4.sh  install_pi.sh  lcd.cpp  main.cpp  pi4v2  pi4v2.cpp  test.cpp  yolov8_ncnn_pi4.cpp
best_ncnn_model/: metadata.yaml
ncnn_model/: classes.txt  metadata.yaml  model.ncnn.param  model_ncnn.py
